--- a/myApp/www/index.html
+++ b/myApp/www/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+    <title>Chinatown</title>
 
 
 
@@ -18,6 +18,7 @@
 
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
 
 
     <style type="text/css">
@@ -40,37 +41,40 @@
         border-right: 0px;
       }
     </style>
+    <script src="lib/angular-translate/angular-translate.js"></script>
+    <script src="lib/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
 
-    <script src="app.js"></script>
+    <script src="js/core/core.module.js"></script>
     <script src="js/core/broadcastservice.js"></script>
     <script src="js/core/config.js"></script>
-    <script src="js/core/core.module.js"></script>
     <script src="js/core/dataservice.js"></script>
     <script src="js/core/languageservice.js"></script>
-    <script src="js/filter/chapterSelection.js"></script>
+    <!-- no filter importet! -->
+    <script src="js/widgets/widgets.module.js"></script>
     <script src="js/widgets/quizDirectives/myTurnCard.js"></script>
     <script src="js/widgets/quizDirectives/myThereAndBackAgain.js"></script>
     <script src="js/widgets/quizDirectives/myChapterQuery.js"></script>
     <script src="js/widgets/quizDirectives/myAnswer.js"></script>
-    <script src="js/widgets/widgets.module.js"></script>
+    <script src="Controllers.js"></script>
     <script src="js/FlashCardTableController.js"></script>
     <script src="js/ImmersionController.js"></script>
     <script src="js/NavigationController.js"></script>
     <script src="js/QuizController.js"></script>
-
+    <script src="app.js"></script>
 
     <!-- Only required for Tab projects w/ pages in multiple tabs
     <script src="lib/ionicuirouter/ionicUIRouter.js"></script>
     -->
 
   </head>
-  <body ng-app="app" animation="slide-left-right-ios7">
+  <body ng-app="myApp" animation="slide-left-right-ios7">
   <div>
     <div>
         <ion-nav-bar class="bar-stable">
             <ion-nav-back-button class="button-icon icon ion-ios-arrow-back">Back</ion-nav-back-button>
         </ion-nav-bar>
         <ion-nav-view></ion-nav-view>
+
     </div>
 </div>
   </body>
