--- a/myApp/www/index.html
+++ b/myApp/www/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title>Chinatown</title>
+    <title>{{'INDEX.PAGETITLE_ID' | translate}}</title>
 
 
 
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
-    <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
+    <!-- cordova script (this will be a 404 during development)
+    <script src="cordova.js"></script>-->
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -71,10 +71,9 @@
   <div>
     <div>
         <ion-nav-bar class="bar-stable">
-            <ion-nav-back-button class="button-icon icon ion-ios-arrow-back">Back</ion-nav-back-button>
+            <ion-nav-back-button class="button-icon icon ion-ios-arrow-back">{{'INDEX.BACK' | translate}}</ion-nav-back-button>
         </ion-nav-bar>
         <ion-nav-view></ion-nav-view>
-
     </div>
 </div>
   </body>
