--- a/myApp/www/index.html
+++ b/myApp/www/index.html
@@ -9,6 +9,7 @@
 
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
+
     <!-- cordova script (this will be a 404 during development)
     <script src="cordova.js"></script>-->
 
@@ -19,7 +20,8 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
-
+    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+    <link href="index.css" rel="stylesheet">
 
     <style type="text/css">
       .platform-ios .manual-ios-statusbar-padding{
@@ -41,6 +43,7 @@
         border-right: 0px;
       }
     </style>
+
     <script src="lib/angular-translate/angular-translate.js"></script>
     <script src="lib/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
 
