--- a/myApp/www/index.html
+++ b/myApp/www/index.html
@@ -70,7 +70,7 @@
     <script src="js/widgets/quizDirectives/myChapterQuery.js"></script>
     <script src="js/widgets/quizDirectives/myAnswer.js"></script>
     <script src="Controllers.js"></script>
-
+    <script src="js/FeedbackController.js"></script>
     <script src="js/ImmersionController.js"></script>
     <script src="js/NavigationController.js"></script>
     <script src="js/FlashCardTableController.js"></script>
