--- a/myApp/www/index.html
+++ b/myApp/www/index.html
@@ -21,7 +21,7 @@
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-    <link href="index.css" rel="stylesheet">
+    <link href="styles/index.css" rel="stylesheet">
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -70,7 +70,6 @@
     <script src="js/widgets/quizDirectives/myChapterQuery.js"></script>
     <script src="js/widgets/quizDirectives/myAnswer.js"></script>
     <script src="Controllers.js"></script>
-    <script src="js/ImmersionController.js"></script>
     <script src="js/NavigationController.js"></script>
     <script src="js/FlashCardTableController.js"></script>
     <script src="js/QuizController.js"></script>
