--- a/myApp/www/index.html
+++ b/myApp/www/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title>{{'INDEX.PAGETITLE_ID' | translate}}</title>
+    <title ng-cloak>{{'INDEX.PAGETITLE_ID' | translate}}</title>
 
 
 
