--- a/myApp/www/index.html
+++ b/myApp/www/index.html
@@ -21,6 +21,7 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.0.9/angular-material.css">
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
     <link href="styles/index.css" rel="stylesheet">
 
