--- a/myApp/www/index.html
+++ b/myApp/www/index.html
@@ -6,8 +6,6 @@
 
     <title ng-cloak>{{'INDEX.PAGETITLE_ID' | translate}}</title>
 
-
-
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
 
@@ -18,12 +16,10 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
 
-
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.0.9/angular-material.css">
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-    <link href="styles/index.css" rel="stylesheet">
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -65,7 +61,7 @@
     <script src="js/core/config.js"></script>
     <script src="js/core/dataservice.js"></script>
     <script src="js/core/languageservice.js"></script>
-    <!-- no filter importet! -->
+    <!-- no filter imported! -->
     <script src="js/widgets/widgets.module.js"></script>
     <script src="js/widgets/quizDirectives/myTurnCard.js"></script>
     <script src="js/widgets/quizDirectives/myThereAndBackAgain.js"></script>
@@ -81,11 +77,11 @@
   <body ng-app="myApp" animation="slide-left-right-ios7">
   <div>
     <div>
-        <ion-nav-bar class="bar-stable">
+        <ion-nav-bar class="bar-stable" id="ionic-header">
             <ion-nav-back-button class="button-icon icon ion-ios-arrow-back">{{'INDEX.BACK' | translate}}</ion-nav-back-button>
         </ion-nav-bar>
         <ion-nav-view></ion-nav-view>
     </div>
 </div>
-  </body>
+</body>
 </html>
